test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-nonnil-owned.chpl
//  lhs: owned?  rhs: owned!  ok

class MyClass {  var x: int;  }

var rhs = new owned MyClass();

record MyRecord {
  var lhs: owned MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
