test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-nonnil-owned.good
init-field-dflt-oknil-owned-from-nonnil-owned.chpl:13: error: done
